@startuml Class
'change direction to not overlap with other classes
left to right direction


class User {
  id: bigIntUnsigned
  firstname: varchar
  lastname: varchar
  email: varchar
  password: varchar
  role: enum
  email_verified_at: timestamp
  created_at: timestamp
  updated_at: timestamp
}

class Developer {
  id: bigIntUnsigned
  user_id: bigIntUnsigned
  description: varchar
  avatar: varchar
  years_of_experience: int
  created_at: timestamp
  updated_at: timestamp
}

class PrestationType {
  id: bigIntUnsigned
  name: varchar
  created_at: timestamp
  updated_at: timestamp
}

class DeveloperPrestation {
  id: bigIntUnsigned
  developer_id: bigIntUnsigned
  prestation_type_id: bigIntUnsigned
  description: varchar
  price: double(10,2)
  created_at: timestamp
  updated_at: timestamp
}

class DeveloperStack {
  id: bigIntUnsigned
  developer_id: bigIntUnsigned
  stack_id: bigIntUnsigned
  is_primary: tinyInt
  stack_experience: int
  created_at: timestamp
  updated_at: timestamp
}

class Stack {
  id: bigIntUnsigned
  name: varchar
  logo: varchar
  created_at: timestamp
  updated_at: timestamp
}

class Order {
  id: bigIntUnsigned
  user_id: bigIntUnsigned
  developer_id: bigIntUnsigned
  developer_prestation_id: bigIntUnsigned
  is_paid: tinyInt
  is_accepted_by_developer: tinyInt
  stripe_session_id: varchar
  reference: varchar
  is_finished: tinyInt
  created_at: timestamp
  updated_at: timestamp
}

class Review {
  id: bigIntUnsigned
  order_id: foreignId
  rating: int
  comment: varchar
  created_at: timestamp
  updated_at: timestamp
}

class Message {
  id: bigIntUnsigned
  from_used_id: bigIntUnsigned
  to_user_id: bigIntUnsigned
  message: varchar
  created_at: timestamp
  updated_at: timestamp
}

class Complaint {
  id: bigIntUnsigned
  oder_id: bigIntUnsigned
  is_user_complaining: tinyInt
  complaint: varchar
  status: enum
  created_at: timestamp
  updated_at: timestamp
}

User "0..1 " -- "0..* " Complaint
User "1 " -- "0..* "Message
User "1 " -- "0..* " Order
User "1 " -- "1 " Developer

Developer "1 " -- "1..* "DeveloperStack
Developer "1 " -- "0..* " Order
Developer "1 "-- "0..* " Review
Developer "1 " -- "1..* " DeveloperPrestation
Developer "1 " -- "0..* " Complaint

DeveloperPrestation "1 " -- "1..* " PrestationType
DeveloperPrestation "1 " -- "1..* " Order

Stack "1 "-- "1..* " DeveloperStack

Order "1 " -- "1 " Review


@enduml
